# basalt

./: .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  basalt_demo.tape  cliff.toml  config.toml  renovate-action.json  renovate-config.json  rust-toolchain.toml
basalt/: CHANGELOG.md  Cargo.toml  build.rs  config.toml  vim.toml
basalt-core/: CHANGELOG.md  Cargo.toml  README.md
basalt-core/src/: lib.rs  markdown.rs  obsidian.rs
basalt-core/src/obsidian/: config.rs  directory.rs  note.rs  vault.rs  vault_entry.rs
basalt-widgets/: Cargo.toml  README.md
basalt-widgets/src/: help.rs  lib.rs  statusbar.rs  vault.rs
basalt-widgets/src/help/: state.rs
basalt-widgets/src/markdown/: state.rs  view.rs
basalt-widgets/src/statusbar/: state.rs
basalt-widgets/src/vault/: state.rs
basalt/src/: actions.rs  app.rs  cli.rs  clipboard.rs  command.rs  config.rs  debug_log.rs  events.rs  explorer.rs  header.rs  help.txt  help_modal.rs  image.rs  lib.rs  main.rs  main_view.rs  mode.rs  note_editor.rs  outline.rs  screen.rs  search_explorer.rs  sidepanel.rs  splash_modal.rs  start_view.rs  statusbar.rs  stylized_text.rs  tabs.rs  text_counts.rs  toast.rs  vault_selector.rs  vault_selector_modal.rs  vault_watcher.rs  version.rs
basalt/src/config/: env.rs  key.rs  key_binding.rs  key_str.rs  keybinding.rs  mod.rs  symbol.rs  test.rs
basalt/src/explorer/: item.rs  state.rs
basalt/src/input/: mod.rs
basalt/src/input/snapshots/: basalt_tui__input__tests__default.snap  basalt_tui__input__tests__delete.snap  basalt_tui__input__tests__insert.snap  basalt_tui__input__tests__text_scrolled.snap  basalt_tui__input__tests__text_unicode.snap  basalt_tui__input__tests__text_with_leading_spaces.snap  basalt_tui__input__tests__text_with_multiple_spaces.snap  basalt_tui__input__tests__with_value.snap  basalt_tui__input__tests__with_value_next_row.snap
basalt/src/markdown/: view.rs
basalt/src/note_editor/: ast.rs  cursor.rs  editor.rs  mod.rs  motion.rs  parser.rs  render.rs  rich_text.rs  state.rs  text_buffer.rs  text_wrap.rs  viewport.rs  virtual_document.rs
basalt/src/note_editor/snapshots/: basalt_tui__note_editor__editor__tests__code_blocks.snap  basalt_tui__note_editor__editor__tests__code_syntax_highlighting_in_blocks.snap  basalt_tui__note_editor__editor__tests__default_content.snap  basalt_tui__note_editor__editor__tests__edit_mode_list_line_by_line_raw.snap  basalt_tui__note_editor__editor__tests__edit_mode_no_empty_line_between_adjacent_blocks.snap  basalt_tui__note_editor__editor__tests__edit_mode_preserves_loose_list_empty_lines.snap  basalt_tui__note_editor__editor__tests__edit_mode_table_break_column_count.snap  basalt_tui__note_editor__editor__tests__edit_mode_table_broken_is_raw.snap  basalt_tui__note_editor__editor__tests__edit_mode_table_cursor_body.snap  basalt_tui__note_editor__editor__tests__edit_mode_table_cursor_delimiter.snap  basalt_tui__note_editor__editor__tests__edit_mode_table_cursor_header.snap  basalt_tui__note_editor__editor__tests__edit_mode_task_list_then_multiple_empty_lines.snap  basalt_tui__note_editor__editor__tests__edit_mode_typing_newline_in_active_block_stable_trailing.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_arbitrary_cursor_move.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_content.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_content_and_simple_change.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_content_with_complete_word_input_change.snap  basalt_tui__note_editor__editor__tests__empty_default_state.snap  basalt_tui__note_editor__editor__tests__headings.snap  basalt_tui__note_editor__editor__tests__image_reserves_space.snap  basalt_tui__note_editor__editor__tests__lists.snap  basalt_tui__note_editor__editor__tests__lists_line_breaks.snap  basalt_tui__note_editor__editor__tests__lists_raw_line_breaks.snap  basalt_tui__note_editor__editor__tests__nesting_lists.snap  basalt_tui__note_editor__editor__tests__nesting_task_lists.snap  basalt_tui__note_editor__editor__tests__paragraphs.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-2.snap  (+40 more)
basalt/src/outline/: state.rs
basalt/src/snapshots/: basalt_tui__cli__tests__help_output.snap  basalt_tui__cli__tests__version_output.snap  basalt_tui__debug_log__tests__render_overlay.snap  basalt_tui__explorer__tests__render_entries-2.snap  basalt_tui__explorer__tests__render_entries-3.snap  basalt_tui__explorer__tests__render_entries-4.snap  basalt_tui__explorer__tests__render_entries.snap  basalt_tui__search_explorer__tests__empty_search.snap  basalt_tui__search_explorer__tests__navigate_mode.snap  basalt_tui__search_explorer__tests__no_results.snap  basalt_tui__search_explorer__tests__with_query.snap  basalt_tui__toast__tests__error.snap  basalt_tui__toast__tests__info.snap  basalt_tui__toast__tests__long_message.snap  basalt_tui__toast__tests__no_level.snap  basalt_tui__toast__tests__success.snap  basalt_tui__toast__tests__warning.snap
obsidian-to-zola/: Cargo.toml
obsidian-to-zola/src/: main.rs
(+100 files in other folders)
