[package]
name = "basalt-core"
description = """
Provides the core functionality for Basalt TUI application
"""
readme = "README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.4.2"
edition = "2021"

[dependencies]
dirs = "5.0.1"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.12.2"
ki = { git = "https://github.com/Ikken9/ki" }

[dev-dependencies]
indoc = "2"
