[package]
name = "basalt-core"
description = """
Provides the core functionality for Basalt TUI application
"""
readme = "README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.6.2"
edition = "2021"

[dependencies]
dirs = "6.0.0"
thiserror = "2.0.16"
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13.0"

[dev-dependencies]
indoc = "2"
