[package]
name = "basalt-widgets"
description = """
Provides the custom ratatui widgets for Basalt TUI application
"""
repository = "https://github.com/erikjuhani/basalt"
readme = "README.md"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"
keywords = ["tui", "markdown", "ratatui"]

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["unstable-widget-ref"] }
basalt-core = { version = "0.6.3" }
