[package]
name = "basalt-tui"
description = """
Basalt TUI application for Obsidian notes.
"""
readme = "../README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.11.2"
edition = "2021"

[dependencies]
basalt-core = { path = "../basalt-core", version = "0.8.1" }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
crossterm = "0.29.0"
pulldown-cmark = "0.13.0"
textwrap = "0.16.2"
serde = { version = "1.0.224", features = ["derive"] }
toml = "0.9.5"
etcetera = "0.11.0"
thiserror = "2.0.16"
unicode-width = "0.2.0"

[dev-dependencies]
indoc = "2"
insta = "1.43.2"
similar-asserts.workspace = true

[[bin]]
name = "basalt"
path = "src/main.rs"
