[package]
name = "basalt-tui"
description = """
Basalt TUI application for Obsidian notes.
"""
readme = "../README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.12.6"
edition = "2021"
rust-version = "1.91.0"
default-run = "basalt"

[dependencies]
basalt-core = { path = "../basalt-core", version = "0.9.0" }
clap = { version = "4.6.1", features = ["derive", "string"] }
ratatui = { version = "0.30.0" }
crossterm = "0.29.0"
pulldown-cmark = "0.13.0"
textwrap = "0.16.2"
serde = { version = "1.0.224", features = ["derive"] }
toml = "1.0.0"
etcetera = "0.11.0"
thiserror = "2.0.16"
unicode-width = "0.2.0"
natord = "1.0.9"
notify-debouncer-full = "0.7.0"
ratatui-image = { version = "11", default-features = false, features = [
    "crossterm",
    "image-defaults",
] }
ureq = "3.3.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

[dev-dependencies]
indoc = "=2.0.7"
insta = "=1.47.2"
similar-asserts.workspace = true

[[bin]]
name = "basalt"
path = "src/main.rs"
